@@ -136,7 +136,7 @@ Contents:
 
   If you are upgrading from an older version of Ampache we recommend
   moving the old directory out of the way, extracting the new copy in 
-  its place and then re-creating the config file. All database updates
+  its place and then copying the old config file. All database updates
   will be handled by the /update.php script. There is no need to insert
   the /sql/ampache.sql if you have an existing installation.
 
