@@ -104,28 +104,45 @@ class AmpacheMpd extends localplay_controller {
 	} // function_map
 
 	/**
-	 * preference
-	 * This function returns an array of the preferences and their 
-	 * information for Ampache to use All preferences will get a 
-	 * localplay_mpd_ appended to their name to avoid conflicts
-	 * however this controller does not need to take that into acount
-	 * REQUIRE for Locaplay
+	 * is_installed
+	 * This returns true or false if MPD controller is installed
 	 */
-	public function get_preferences() { 
+	public function is_installed() { 
 
-		$preferences = array(); 
 
-		$preferences[] = array('name'=>'hostname','default'=>'localhost','type'=>'string','description'=>'MPD Hostname');
-		$preferences[] = array('name'=>'port','default'=>'6600','type'=>'integer','description'=>'MPD Port');
-		$preferences[] = array('name'=>'password','default'=>'','type'=>'string','description'=>'MPD Password');
-
-		return $preferences;
-
-	} // preferences
-
+	} // is_installed
 
 	/**
-	 * add_songs
+	 * install
+	 * This function installs the MPD localplay controller
+	 */
+	public function install() { 
+
+
+
+	} // install
+
+	/**
+	 * uninstall
+	 * This removes the localplay controller 
+	 */
+	public function uninstall() { 
+
+
+	} // uninstall
+
+	/**
+	 * actions
+	 * List all the special kick ass things you can do with MPD
+	 */
+	public function actions() { 
+
+
+
+	} // actions
+
+	/**
+	 * add
 	 * This must take an array of URL's from Ampache
 	 * and then add them to MPD
 	 */
