@@ -4,6 +4,10 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha3 
+	- Added ability to gather album art for a single catalog at a time
+	- Improved Upgrade Documentation
+	- Disabled more functionality when in Demo Mode because people
+		are lame
 	- Cleaned up Preferences, moved Plugin Preferences into their own
 		section
 	- Fixed potential LastFM issue if invalid data is passed
